@@ -257,6 +257,11 @@ line-height: 200%;
 display: none;
 width: 150px;
 right: 0px;
+z-index: 2;
+}
+.active-scaffold .actions .action_group.dyn ul {
+width: auto;
+display: block;
 }
 
 .active-scaffold .actions .action_group ul ul {
@@ -272,7 +277,7 @@ border-top: 1px dashed;
 display: block;
 position: relative;
 width: auto;
-z-index: 2;
+text-align: left;
 }
 
 .active-scaffold .actions .action_group ul li div {
@@ -288,6 +293,9 @@ z-index: 2;
   padding: 5px 5px 5px 25px;
   background-position: 5px 50%;
   background-repeat: no-repeat;
+}
+.active-scaffold .actions .action_group.dyn ul li a {
+  padding-left: 5px;
 }
 
 .active-scaffold .actions .action_group ul li.top {
