@@ -14,6 +14,7 @@
 - Allow to create in nested has_many :through associations, when source association is a belongs_to
 - Fix calculations using field_search with has_many includes
 - Add support to ActiveScaffold.create_record_row to insert after or before of an element
+- Add support for dynamic action group
 
 = 3.2.17 (not released yet)
 - fix constraints for columns with multiple columns in search_sql
